--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
         <encoding>UTF-8</encoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <com.google.code.gson.version>2.10.1</com.google.code.gson.version>
+        <gson.version>2.10.1</gson.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
     </dependencies>
-
 </project>
